<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hotel"
            android:icon="@drawable/ic_hotel_black_24dp"
            android:title="@string/nav_hotel" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_user" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_manage" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_logout" />
    </group>
</menu>
